JSW Devsb/src/objects/Dealer_ABP_District_Wise__c.object
<CustomObject>
    <fields>
        <fullName>Account_Annual_Target__c</fullName>
        <label>Account Annual Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Current_Market_Share__c</fullName>
        <formula>Account_Current_Sales__c  /  Account_Potential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Current Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Current_Sales__c</fullName>
        <label>Account Current Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Expected_Market_Share__c</fullName>
        <formula>Account_Expected_Sales__c  /  Account_Potential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Expected Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Expected_Sales__c</fullName>
        <label>Account Expected Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Potential__c</fullName>
        <label>Account Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer ABP-District Wise</relationshipLabel>
        <relationshipName>Dealer_ABP_District_Wise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Business_Plan_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Business Plan No</label>
        <referenceTo>ABP_District_Level__c</referenceTo>
        <relationshipLabel>Dealer ABP-District Wise</relationshipLabel>
        <relationshipName>Dealer_ABP_District_Wise</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dealer ABP-District Wise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dealer ABP-District Wise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer ABP-District Wise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>